@@ -18,6 +18,7 @@
 	* Fixed bug #13885: XSS in indexed search BE module (thanks to Benjamin Mack)
 	* Fixed bug #15254: Extension Manager allows to edit arbitrary files if noEdit flag is not set (thanks to Helmut Hummel)
 	* Fixed bug #14389: phtml is also PHP extension and should be denied editing / uploading via fileadmin (thanks to Ernesto Baschny)
+	* Fixed bug #1985: XSS vulnerability in wizard classes
 
 2010-07-21  Ingo Renner  <ingo@typo3.org>
 
